[tool.poetry]
name = "postgres_agent"
version = "0.1.0"
description = ""
authors = ["Joni <hangjoni@gmail.com>"]
readme = "README.md"
packages = [{include = "postgres_da_ai_agent"}]

[tool.poetry.dependencies]
python = "3.9.18"
psycopg2-binary = "2.9.9"
argparse = "1.4.0"
python-dotenv = "1.0.0"
openai = "0.28.1"
pyautogen = "0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "postgres_da_ai_agent.main:main"
